--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,10 @@ project(Hohmann VERSION 1.0)
 set(SOURCES src/main.cpp)
 add_executable(Hohmann ${SOURCES})
 
-set(INCLUDE_DIR include)
-target_include_directories(Hohmann PRIVATE ${INCLUDE_DIR})
+# GLFW submodule
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
-#set(INCLUDE_HEADER_FILES include/**/*.h include/**/*.hpp)
-
-find_package(OpenGL REQUIRED)
-find_package(glfw3 REQUIRED)
-
-target_link_libraries( Hohmann OpenGL::GL glfw )
-
+add_subdirectory(lib/glfw)
+target_link_libraries(Hohmann glfw)
